FrameworksResOverlay: Disable safe volume everywhere, not just the US
Safe Volume has many false alarms. And if overridden by the user, at
every 20 hours of accumulated(!) audio playback it will intentionally
reset - even while the audio is playing. This can ruin the listening
experience, and ironically pose a safety hazard when e.g. the user is
operating a vehicle...

AOSP already opted out of Safe Volume in the overlays for Mobile Country
Code 310-316 (= US). Make this universal.

Signed-off-by: Rusty Bird <rustybird@net-c.com>
[kdrag0n: Moved into vendor overlay]
Signed-off-by: Danny Lin <danny@kdrag0n.dev>
Change-Id: I687a85a11958a082eb96a590fe82be435ab60767

--- a/rro_overlays/FrameworksResOverlay/res/values/config.xml
+++ b/rro_overlays/FrameworksResOverlay/res/values/config.xml
@@ -5,6 +5,9 @@
      SPDX-License-Identifier: Apache-2.0
 -->
 <resources>
+    <!-- Whether safe headphone volume is enabled or not (country specific). -->
+    <bool name="config_safe_media_volume_enabled">false</bool>
+
     <!-- The max scale for the wallpaper when it's zoomed in -->
     <item name="config_wallpaperMaxScale" format="float" type="dimen">1</item>
 </resources>
