FrameworksResOverlay: Downscale task snapshots to 80%
This saves memory without a noticeable loss in quality.

Extracted from the Pixel stock ROM.

Change-Id: I1287990325912e70d98d07fe3ba3843b8bf1404a

--- a/rro_overlays/FrameworksResOverlay/res/values/config.xml
+++ b/rro_overlays/FrameworksResOverlay/res/values/config.xml
@@ -13,4 +13,7 @@
 
     <!-- the number of the max cached processes in the system. -->
     <integer name="config_customizedMaxCachedProcesses">64</integer>
+
+    <!-- The amount to scale fullscreen snapshots for Overview and snapshot starting windows. -->
+    <item name="config_highResTaskSnapshotScale" format="float" type="dimen">0.8</item>
 </resources>
