SimpleDeviceConfigOverlay: Compact cached app heaps in the background
Background ART heap compaction for cached apps has been recommended for
Android Go devices for a while, and Google has enabled it for the Pixel
5 on RQ1A.201205.010. This feature should help fit more cached apps in
memory.

Change-Id: Ib6aae2f0567e2a125860828787de79c858230843

--- a/rro_overlays/SimpleDeviceConfigOverlay/res/values/config.xml
+++ b/rro_overlays/SimpleDeviceConfigOverlay/res/values/config.xml
@@ -53,5 +53,8 @@
 
         <!-- Show notification volume control slider separate from ring -->
         <item>systemui/volume_separate_notification=true</item>
+
+        <!-- ART heap compaction for cached apps -->
+        <item>activity_manager/use_compaction=true</item>
     </string-array>
 </resources>
