--- a/rro_overlays/SimpleDeviceConfigOverlay/res/values/config.xml
+++ b/rro_overlays/SimpleDeviceConfigOverlay/res/values/config.xml
@@ -21,8 +21,6 @@
             System
         -->
 
-        <!-- Use new privacy indicators for location -->
-        <item>privacy/location_indicators_enabled=true</item>
         <!-- Allow users to disable location indicators in Developer Options -->
         <item>privacy/location_indicator_settings_enabled=true</item>
 
@@ -59,5 +57,10 @@
 
         <!-- Don't pin camera app to save memory -->
         <item>runtime_native_boot/pin_camera=false</item>
+    </string-array>
+
+    <string-array name="configs_base_soft">
+        <!-- Use new privacy indicators for location -->
+        <item>privacy/location_indicators_enabled=true</item>
     </string-array>
 </resources>
