FrameworksResOverlay: Disable turbulence noise
Change-Id: Ic0211ae25e87742187d026cb4b73d96fdce20120

--- a/rro_overlays/FrameworksResOverlay/res/values/config.xml
+++ b/rro_overlays/FrameworksResOverlay/res/values/config.xml
@@ -16,4 +16,7 @@
 
     <!-- The amount to scale fullscreen snapshots for Overview and snapshot starting windows. -->
     <item name="config_highResTaskSnapshotScale" format="float" type="dimen">0.8</item>
+
+    <!-- Whether to play turbulence noise after clicking the play button -->
+    <bool name="config_turbulenceNoise">false</bool>
 </resources>
